--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "graphql": "^15.5.1",
     "lodash": "^4.17.21",
     "meteor-node-stubs": "^1.1.0",
+    "nodemailer": "^6.7.3",
     "prop-types": "^15.7.2",
     "qrcode": "^1.5.0",
     "react": "^17.0.2",
