--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "faker": "^5.5.3",
     "fast-check": "^2.17.0",
     "graphql": "^15.5.1",
+    "json2csv": "^5.0.7",
     "lodash": "^4.17.21",
     "meteor-node-stubs": "^1.1.0",
     "nodemailer": "^6.7.3",
