--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
     "@babel/runtime": "^7.14.8",
     "classnames": "^2.3.1",
     "core-js": "^3.16.0",
+    "csvtojson": "^2.0.10",
     "faker": "^5.5.3",
     "fast-check": "^2.17.0",
     "graphql": "^15.5.1",
