--- a/app/package.json
+++ b/app/package.json
@@ -32,8 +32,7 @@
     "sweetalert": "^2.1.2",
     "uniforms": "^3.5.2",
     "uniforms-bridge-simple-schema-2": "^3.5.2",
-    "uniforms-semantic": "^3.5.2",
-    "uuid": "^8.3.2"
+    "uniforms-semantic": "^3.5.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
